# nvim

./: .gitignore  _vimrc  coc-settings.json  init.lua  init.vim  init_bk.vim  install.bat  install.cmd  lazy-lock.json  nvimmlink.bat  open_with_nvim.reg  vimspector_config.json
autoload/: plug.vim
autoload/python/: ipy.vim
lua/: autocmds.lua  basic.lua  colorscheme.lua  config.lua  keybindings.lua  plugins.lua
lua/dap/nvim-dap/: init.lua
lua/dap/vimspector/: init.lua
lua/dap/vimspector/templates/: python.vimspector.json
lua/lsp/: cmp.lua  formatter.lua  null-ls.lua  setup.lua
lua/lsp/config/: clangd.lua  common.lua  lua.lua  pyright.lua  snippets.lua
lua/plugin-config/: coc.lua  comment.lua  debuger.lua  indent-blankline.lua  lualine.lua  nvim-comment.lua  nvim-tree.lua  nvim-treesitter.lua  project.lua  targbar.lua  toggleterm.lua
lua/plugin-config/coc/ultisnips/: python.snippets
lua/utils/: im-select.lua
plugin/: packer_compiled.lua
sessions/: default.vim
snip/: python.json  python.snippets
test/: CMakeLists.txt  main.c  test.c  test.py
test/head/: s.h
